{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "aad55710-4c2e-43dc-a93c-35f0f9cb75c9",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "afa9404b-7378-4e65-93f6-aa5cb9fef556",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftMouseButton",
                    "type": "Button",
                    "id": "9ad10b04-a004-47d0-94cd-2dc1f251e4ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouseButton",
                    "type": "Button",
                    "id": "af7cd62d-447b-4c0d-b062-5d7e3f975221",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8b925425-5205-4183-9693-d2072d636207",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5197879f-13fd-44ea-bc35-a696b82a03b1",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "RightMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1fc9094-6906-4073-a18c-1bd15949ee64",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "LeftMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse and keyboard",
            "bindingGroup": "Mouse and keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}